# fmm

./: .gitignore  CMakeLists.txt  README.md
include/: balanced_fmm_tree.hpp  point_source.hpp  vector.hpp
src/: main.cpp
tests/: testfmm.cpp  testsource.cpp  testvec.cpp
visualizer/: vis_fmm.py
